# thegrapefruitsduo-back

./: .env.example  README.md  pyproject.toml  requirements.txt  seed.py
.github/workflows/: build.yml
app/: __init__.py  conftest.py  main.py  seed.py  test_main.py
app/admin/: __init__.py  config.py  contact.py  images.py  utils.py
app/controllers/: base_controller.py  controller.py  events.py  group.py  musicians.py  users.py
app/db/: __init__.py  base_queries.py  builders.py  conn.py  events.py  group.py  musicians.py  queries.py  test_queries.py  users.py
app/models/: __init__.py  contact.py  event.py  group.py  musician.py  tgd.py  user.py
app/routers/: __init__.py  contact.py  events.py  group.py  musicians.py  test_group.py  test_musicians.py  test_users.py  users.py
app/scripts/: version.py
tests/: test_app.py  test_queries.py
