[tool.poetry]
name = "thegrapefruitsduo"
version = "0.2.0"
package-mode = false
description = "FastAPI backend for thegrapefruitsduo.com"
authors = ["Lucas Jensen <lucas.p.jensen10@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.110.0" }
python-dotenv = "^1.0.1"
icecream = "^2.1.3"
pyjwt = "^2.8.0"
mysql-connector-python = "^8.3.0"
cloudinary = "^1.39.1"
cryptography = "^42.0.5"
toml = "^0.10.2"


[tool.poetry.dev-dependencies]
black = "^24.3.0"
pytest-asyncio = "^0.23.6"
pytest = "^8.1.1"


[tool.poetry.scripts]
seed = "app.seed:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
